# llic64

./: CMakeLists.txt  README.md  usb-64-rev2c.kicad_prl
hw/: SOT723.STEP  UJ2-AH-4-SMT.step  c64_controls_sch.kicad_sch  fp-info-cache  mcu.kicad_sch  misc.kicad_sch  sym-lib-table  usb-64-rev2c.kicad_pcb  usb-64-rev2c.kicad_prl  usb-64-rev2c.kicad_pro  usb-64-rev2c.kicad_sch  usb_sch.kicad_sch  ~usb-64-rev2c.kicad_pcb.lck
hw/NCP708MU330TAG/: NCP708MU330TAG.bak  NCP708MU330TAG.dcm  NCP708MU330TAG.kicad_sym  NCP708MU330TAG.lib  NCP708MU330TAG.mod  SON95P300X300X55-7N.kicad_mod
hw/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: board_layout.h  board_output.c  gamepads_report.h  hid_app.c  hid_app.cpp  main.c  tusb_config.h
src/headers/: board_layout.h  gamepads_report.h  hid_app.h
